--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,10 @@ dependencies {
     compile 'javax.servlet.jsp:jsp-api:2.1'
     compile 'jstl:jstl:1.2'
     compile 'javax.servlet:javax.servlet-api:3.0.1'
+    compile (
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.4.1'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.4.1'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.4.1']
+    )
 }
 
