user modification tested

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/NullPointer
 jdbc.username=root
-jdbc.password=admin
+jdbc.password=K02200059
 
 ##DataSource Global Setting
 
